--- a/index.html
+++ b/index.html
@@ -1,12 +1,112 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    />
+    <script src="main.js"></script>
+    <title>CoderStore</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="/index.html">CoderStore</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+       
+          <li class="nav-item">
+            <a class="nav-link" href="#">Acerca de</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Servicios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/contact.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+<br><br><br><br><br><br>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <h2 class="text-center mb-4">Registro</h2>
+          <form>
+            <div class="form-group">
+              <label for="nombre">Nombre</label>
+              <input
+                type="text"
+                class="form-control"
+                id="nombre"
+                placeholder="Ingresa tu nombre"
+              />
+            </div>
+            <div class="form-group">
+              <label for="email">Correo Electrónico</label>
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                placeholder="Ingresa tu correo electrónico"
+                autocomplete="on"
+              />
+            </div>
+            <div class="form-group">
+              <label for="contrasena">Contraseña</label>
+              <input
+                type="password"
+                class="form-control"
+                id="contrasena"
+                placeholder="Ingresa tu contraseña"
+              />
+            </div>
+            <div class="form-group">
+              <label for="confirmarContrasena">Confirmar Contraseña</label>
+              <input
+                type="password"
+                class="form-control"
+                id="confirmarContrasena"
+                placeholder="Confirma tu contraseña"
+              />
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">
+              Registrarse
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+    <main>
+      <section>
+        <div></div>
+        <div></div>
+        <div></div>
+      </section>
+
+      <section>
+        <div></div>
+        <div></div>
+        <div></div>
+      </section>
+    </main>
+    <footer></footer>
+
+    <script src="main.js" defer></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  </body>
 </html>
