--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css">
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -26,9 +27,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-       
           <li class="nav-item">
-            <a class="nav-link" href="#">Acerca de</a>
+            <a class="nav-link" href="./pages/registro.html">Registrarse</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Servicios</a>
@@ -39,56 +39,8 @@
         </ul>
       </div>
     </nav>
-<br><br><br><br><br><br>
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-6">
-          <h2 class="text-center mb-4">Registro</h2>
-          <form>
-            <div class="form-group">
-              <label for="nombre">Nombre</label>
-              <input
-                type="text"
-                class="form-control"
-                id="nombre"
-                placeholder="Ingresa tu nombre"
-              />
-            </div>
-            <div class="form-group">
-              <label for="email">Correo Electrónico</label>
-              <input
-                type="email"
-                class="form-control"
-                id="email"
-                placeholder="Ingresa tu correo electrónico"
-                autocomplete="on"
-              />
-            </div>
-            <div class="form-group">
-              <label for="contrasena">Contraseña</label>
-              <input
-                type="password"
-                class="form-control"
-                id="contrasena"
-                placeholder="Ingresa tu contraseña"
-              />
-            </div>
-            <div class="form-group">
-              <label for="confirmarContrasena">Confirmar Contraseña</label>
-              <input
-                type="password"
-                class="form-control"
-                id="confirmarContrasena"
-                placeholder="Confirma tu contraseña"
-              />
-            </div>
-            <button type="submit" class="btn btn-primary btn-block">
-              Registrarse
-            </button>
-          </form>
-        </div>
-      </div>
-    </div>
+    <br /><br /><br /><br /><br /><br />
+
     <main>
       <section>
         <div></div>
