--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <script src="/main.js"></script>
   <title>Página de Contacto</title>
@@ -25,7 +26,7 @@
           <ul class="navbar-nav">
        
             <li class="nav-item">
-              <a class="nav-link" href="#">Acerca de</a>
+              <a class="nav-link" href="./registro.html">Registrarse</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Servicios</a>
@@ -34,6 +35,7 @@
           </ul>
         </div>
       </nav>
+      <br><br><br><br><br>
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-6">
